--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ Todo:
   - Chat window load when click on username
   - Create shcema for messages
   - Create schema for chats
+  - Add offline/online lables
